force-app/main/default/objects/Lead/fields/Ref_2_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Ref_2_Mobile__c</fullName>
    <label>Ref 2 Mobile</label>
    <type>Phone</type>
</CustomField>