force-app/main/default/objects/Lead/fields/Ref_2_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Ref_2_Relationship__c</fullName>
    <label>Ref 2 Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>