force-app/main/default/objects/Lead/fields/Reference_Checks_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Reference_Checks_Completed_Date__c</fullName>
    <label>Reference Checks Completed Date</label>
    <type>Date</type>
</CustomField>