force-app/main/default/objects/Lead/fields/Referred_to_Cancer_Hub__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_Cancer_Hub__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when family has been referred to Cancer Hub alliance.</description>
    <label>Referred to Cancer Hub</label>
    <type>Checkbox</type>
</CustomField>