force-app/main/default/objects/Lead/fields/SchoolsValid__c.field-meta.xml
<CustomField>
    <fullName>SchoolsValid__c</fullName>
    <formula>AND(
if( Child_1_School_Name__c = &quot;&quot;, True, if( (Child_1_School_Validated__c ) = &quot;&quot;, false,true)),
if( Child_2_School_Name__c = &quot;&quot;, True, if( (Child_2_School_Validated__c ) = &quot;&quot; , false,true)),
if( Child_3_School_Name__c = &quot;&quot;, True, if( (Child_3_School_Validated__c )  =&quot;&quot;, false,true)),
if( Child_4_School_Name__c = &quot;&quot;, True, if( (Child_4_School_Validated__c ) = &quot;&quot; , false,true)))</formula>
    <label>SchoolsValid</label>
    <type>Checkbox</type>
</CustomField>