force-app/main/default/objects/Lead/fields/SGC_YP_B_P_Date__c.field-meta.xml
<CustomField>
    <fullName>SGC_YP_B_P_Date__c</fullName>
    <inlineHelpText>Safeguarding Children &amp; Young People Behaviour Guidelines and Procedures Signed On Date</inlineHelpText>
    <label>SGC&amp;YP B&amp;P Date</label>
    <type>Date</type>
</CustomField>