force-app/main/default/objects/Lead/fields/Social_Worker__c.field-meta.xml
<CustomField>
    <fullName>Social_Worker__c</fullName>
    <label>Social Worker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>