force-app/main/default/objects/Lead/fields/Stage_of_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Stage_of_Treatment__c</fullName>
    <label>Stage of Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Off Treatment</fullName>
            </value>
            <value>
                <fullName>On Treatment</fullName>
            </value>
            <value>
                <fullName>Bereaved</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Palliative</fullName>
            </value>
            <value>
                <fullName>Transitioning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>