force-app/main/default/objects/Lead/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <description>used to track referral forms</description>
    <label>utm_campaign</label>
    <type>TextArea</type>
</CustomField>