force-app/main/default/objects/Lead/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <description>store UTM source for tracking referalls</description>
    <label>utm_source</label>
    <type>TextArea</type>
</CustomField>