force-app/main/default/objects/Lead/fields/Volunteer_CV__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_CV__c</fullName>
    <label>CV</label>
    <type>Url</type>
</CustomField>