force-app/main/default/objects/Lead/fields/Volunteer_Interview_Scheduled_For__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Interview_Scheduled_For__c</fullName>
    <label>Volunteer Interview Scheduled For</label>
    <type>DateTime</type>
</CustomField>