force-app/main/default/objects/Lead/fields/Volunteer_Type__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Type__c</fullName>
    <label>Volunteer Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Companion/Rover</fullName>
            </value>
            <value>
                <fullName>Medical Volunteer</fullName>
            </value>
            <value>
                <fullName>Casual Event &amp; Office Volunteer</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Endorsed Enrolled Nurse</fullName>
            </value>
            <value>
                <fullName>Events/Fundraising</fullName>
            </value>
            <value>
                <fullName>Office Administration</fullName>
            </value>
            <value>
                <fullName>Registered Nurse</fullName>
            </value>
            <value>
                <fullName>Fundraising Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>