force-app/main/default/objects/Lead/fields/Volunteer_Types_Test__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Types_Test__c</fullName>
    <label>Volunteer Types Test</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>