force-app/main/default/objects/Lead/fields/Wealth_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Capacity__c</fullName>
    <description>What is the approximate capacity to give for this individual? Used for MD/Philanthropy donors</description>
    <inlineHelpText>What is the approximate capacity to give for this individual? Used for MD/Philanthropy donors</inlineHelpText>
    <label>Wealth Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>