force-app/main/default/objects/Lead/fields/Webform_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Webform_Record_Type__c</fullName>
    <label>Webform Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family Application Form</fullName>
            </value>
            <value>
                <fullName>Volunteer Application Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>