force-app/main/default/objects/Lead/fields/Who_should_we_contact_about_this_referra__c.field-meta.xml
<CustomField>
    <fullName>Who_should_we_contact_about_this_referra__c</fullName>
    <description>Who should we contact for this referral?</description>
    <inlineHelpText>Who should we contact for this referral?</inlineHelpText>
    <label>Best person to contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Me</fullName>
            </value>
            <value>
                <fullName>The person I am referring</fullName>
            </value>
            <value>
                <fullName>Someone Else</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>