force-app/main/default/objects/Lead/fields/Why_do_you_want_to_volunteer_with_CQ__c.field-meta.xml
<CustomField>
    <fullName>Why_do_you_want_to_volunteer_with_CQ__c</fullName>
    <label>Why do you want to volunteer with CQ?</label>
    <type>TextArea</type>
</CustomField>