force-app/main/default/objects/Lead/fields/WWCC_Expiry__c.field-meta.xml
<CustomField>
    <fullName>WWCC_Expiry__c</fullName>
    <label>WWCC Expiry</label>
    <type>Date</type>
</CustomField>