force-app/main/default/objects/Lead/fields/WWCC_Status__c.field-meta.xml
<CustomField>
    <fullName>WWCC_Status__c</fullName>
    <label>WWCC Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>