force-app/main/default/objects/Lead/fields/WWCC_Verified__c.field-meta.xml
<CustomField>
    <fullName>WWCC_Verified__c</fullName>
    <label>WWCC Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>