force-app/main/default/objects/Lead/fields/x3rd_Party_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>x3rd_Party_Applicant_Name__c</fullName>
    <label>3rd Party Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>