force-app/main/default/objects/Lead/fields/X3rd_Party_Application_Email__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Application_Email__c</fullName>
    <label>3rd Party Application Email</label>
    <type>Email</type>
</CustomField>