force-app/main/default/objects/Lead/fields/X3rd_Party_Application_Phone__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Application_Phone__c</fullName>
    <label>3rd Party Application Phone</label>
    <type>Phone</type>
</CustomField>