force-app/main/default/objects/Lead/recordTypes/App_Users.recordType-meta.xml
<RecordType>
    <fullName>App_Users</fullName>
    <active>true</active>
    <businessProcess>Fundraising</businessProcess>
    <label>App Users</label>
</RecordType>