force-app/main/default/objects/Lead/recordTypes/Bequests.recordType-meta.xml
<RecordType>
    <fullName>Bequests</fullName>
    <active>true</active>
    <businessProcess>Fundraising</businessProcess>
    <label>Bequests</label>
</RecordType>