force-app/main/default/objects/Lead/recordTypes/Corporate_Volunteers.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Volunteers</fullName>
    <active>true</active>
    <businessProcess>Family Application</businessProcess>
    <label>Corporate Volunteers</label>
</RecordType>