force-app/main/default/objects/Lead/recordTypes/Family_Application.recordType-meta.xml
<RecordType>
    <fullName>Family_Application</fullName>
    <active>true</active>
    <businessProcess>Family Application</businessProcess>
    <label>Family Application</label>
</RecordType>