force-app/main/default/objects/Lead/recordTypes/Family_Referral.recordType-meta.xml
<RecordType>
    <fullName>Family_Referral</fullName>
    <active>true</active>
    <businessProcess>Family Application</businessProcess>
    <label>Family Referral</label>
</RecordType>