force-app/main/default/objects/Lead/recordTypes/Grants.recordType-meta.xml
<RecordType>
    <fullName>Grants</fullName>
    <active>true</active>
    <businessProcess>Fundraising</businessProcess>
    <label>Grants</label>
</RecordType>