force-app/main/default/objects/Lead/recordTypes/In_Hospital_Family.recordType-meta.xml
<RecordType>
    <fullName>In_Hospital_Family</fullName>
    <active>true</active>
    <businessProcess>In Hospital Lead Process</businessProcess>
    <label>In Hospital Family</label>
</RecordType>