force-app/main/default/objects/Lead/recordTypes/Individual_Donors.recordType-meta.xml
<RecordType>
    <fullName>Individual_Donors</fullName>
    <active>true</active>
    <businessProcess>Fundraising</businessProcess>
    <description>Acquisition Lists</description>
    <label>Individual Donors</label>
</RecordType>