force-app/main/default/objects/Lead/recordTypes/Major_Donors.recordType-meta.xml
<RecordType>
    <fullName>Major_Donors</fullName>
    <active>true</active>
    <businessProcess>Fundraising</businessProcess>
    <label>Major Donors</label>
</RecordType>