force-app/main/default/objects/Lead/recordTypes/School.recordType-meta.xml
<RecordType>
    <fullName>School</fullName>
    <active>true</active>
    <businessProcess>Volunteer</businessProcess>
    <label>School</label>
</RecordType>