force-app/main/default/objects/Lead/recordTypes/Social_Media_Leads.recordType-meta.xml
<RecordType>
    <fullName>Social_Media_Leads</fullName>
    <active>true</active>
    <businessProcess>Fundraising</businessProcess>
    <description>Leads from social media lead gen e.g. Facebook ads</description>
    <label>Social Media Leads</label>
</RecordType>