force-app/main/default/objects/Lead/recordTypes/Supporters.recordType-meta.xml
<RecordType>
    <fullName>Supporters</fullName>
    <active>true</active>
    <businessProcess>General Supporters</businessProcess>
    <description>Used for general supporter leads, e.g. responses from lead gen via Facebook etc</description>
    <label>Supporters</label>
</RecordType>