force-app/main/default/objects/Lead/recordTypes/Trust_and_Foundations.recordType-meta.xml
<RecordType>
    <fullName>Trust_and_Foundations</fullName>
    <active>true</active>
    <businessProcess>Fundraising</businessProcess>
    <label>Trust and Foundations</label>
</RecordType>