force-app/main/default/objects/Lead/recordTypes/Volunteer.recordType-meta.xml
<RecordType>
    <fullName>Volunteer</fullName>
    <active>true</active>
    <businessProcess>Volunteer</businessProcess>
    <label>Volunteer</label>
</RecordType>