force-app/main/default/objects/Lead/recordTypes/Website_Leads.recordType-meta.xml
<RecordType>
    <fullName>Website_Leads</fullName>
    <active>true</active>
    <businessProcess>Fundraising</businessProcess>
    <description>Leads from Funraisin EOIS or other website webforms</description>
    <label>Website Leads</label>
</RecordType>