force-app/main/default/objects/Lead/listViews/Corporate_Volunteers.listView-meta.xml
<ListView>
    <fullName>Corporate_Volunteers</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Position__c</columns>
    <columns>Event__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Corporate_Volunteers</value>
    </filters>
    <label>Corporate Volunteers</label>
</ListView>