force-app/main/default/objects/Lead/listViews/Emma_s_Test_List.listView-meta.xml
<ListView>
    <fullName>Emma_s_Test_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>contains</operation>
        <value>Volunteer</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Contacting,Screening</value>
    </filters>
    <label>Emma&apos;s Test List</label>
</ListView>