force-app/main/default/objects/Lead/listViews/EOI_s.listView-meta.xml
<ListView>
    <fullName>EOI_s</fullName>
    <columns>FULL_NAME</columns>
    <columns>Gender__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Office__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Website - Volunteer Application EOI Form,Website - Volunteer Application EOI Followup Form</value>
    </filters>
    <label>EOI&apos;s</label>
</ListView>