force-app/main/default/objects/Lead/listViews/Escarparde_Leads_from_FB.listView-meta.xml
<ListView>
    <fullName>Escarparde_Leads_from_FB</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Supporters</value>
    </filters>
    <label>esCarparde Leads from FB</label>
    <sharedTo>
        <roleAndSubordinatesInternal>GM_Fundraising</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Media_Communications_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>