force-app/main/default/objects/Lead/listViews/IS_Team_Lead.listView-meta.xml
<ListView>
    <fullName>IS_Team_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>IS Team</label>
    <queue>IS_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>