force-app/main/default/objects/Lead/listViews/National_Family_leads_New.listView-meta.xml
<ListView>
    <fullName>National_Family_leads_New</fullName>
    <columns>Office__c</columns>
    <columns>FULL_NAME</columns>
    <columns>x3rd_Party_Applicant_Name__c</columns>
    <columns>Family_Type__c</columns>
    <columns>Diagnosis__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Diagnosis_Date__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Family_Application,Lead.Family_Referral</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,Contacted</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>3/1/2022 12:00 AM</value>
    </filters>
    <label>National Family leads - New</label>
</ListView>