force-app/main/default/objects/Lead/listViews/New_Vollie_Leads_LOOK_FOR_OTHER.listView-meta.xml
<ListView>
    <fullName>New_Vollie_Leads_LOOK_FOR_OTHER</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Office_Name__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Lead_Rejection_Reason__c</columns>
    <columns>How_did_you_year_about_CQ_Other__c</columns>
    <columns>FULL_NAME</columns>
    <columns>Volunteer_Type__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>How_did_you_Hear_about_Camp_Quality__c</columns>
    <columns>Employer__c</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Lead_Mapping_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Volunteer</value>
    </filters>
    <label>New Vol Leads (ATT: BIANCA WALKER QLD)</label>
</ListView>