force-app/main/default/objects/Lead/listViews/New_Volunteer_Leads_ACT.listView-meta.xml
<ListView>
    <fullName>New_Volunteer_Leads_ACT</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Volunteer_Type__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Volunteer</value>
    </filters>
    <filters>
        <field>Office__c</field>
        <operation>equals</operation>
        <value>Canberra</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,Contacted,Contacting,Screening</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>notEqual</operation>
        <value>Website - Volunteer Application EOI Form</value>
    </filters>
    <label>New Volunteer Leads - ACT</label>
    <sharedTo>
        <group>Super_Users</group>
    </sharedTo>
</ListView>