force-app/main/default/objects/Lead/listViews/New_Volunteer_Leads_QLD.listView-meta.xml
<ListView>
    <fullName>New_Volunteer_Leads_QLD</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Volunteer_Type__c</columns>
    <columns>Volunteer_Interview_Scheduled_For__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Volunteer</value>
    </filters>
    <filters>
        <field>Office__c</field>
        <operation>equals</operation>
        <value>Brisbane,Townsville,Cairns</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,Contacted,Contacting,Screening</value>
    </filters>
    <filters>
        <field>Volunteer_Type__c</field>
        <operation>notEqual</operation>
        <value>Casual Event &amp; Office Volunteer,Events/Fundraising,Office Administration</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2019 12:00 AM</value>
    </filters>
    <label>New Volunteer Leads - QLD</label>
    <sharedTo>
        <group>Super_Users</group>
    </sharedTo>
</ListView>