force-app/main/default/objects/Lead/listViews/NNSW_Leads.listView-meta.xml
<ListView>
    <fullName>NNSW_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>Lead_Rejection_Reason__c</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Volunteer_Type__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>contains</operation>
        <value>Volunteer</value>
    </filters>
    <filters>
        <field>Office__c</field>
        <operation>equals</operation>
        <value>Coffs Harbour</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Withdrawn</value>
    </filters>
    <filters>
        <field>Volunteer_Type__c</field>
        <operation>notEqual</operation>
        <value>Events/Fundraising,Fundraising Volunteer</value>
    </filters>
    <label>NNSW Leads</label>
</ListView>