force-app/main/default/objects/Lead/listViews/NSW_ACT_Volunteer_Leads.listView-meta.xml
<ListView>
    <fullName>NSW_ACT_Volunteer_Leads</fullName>
    <booleanFilter>1 AND 2 and (3 OR 4) AND 5</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>Office__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Volunteer</value>
    </filters>
    <filters>
        <field>Office_Name__c</field>
        <operation>equals</operation>
        <value>Sydney</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Website - Volunteer Application Form</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Website - Volunteer Application EOI Followup Form</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,Contacting</value>
    </filters>
    <label>Sydney Volunteer Leads</label>
    <sharedTo></sharedTo>
</ListView>