force-app/main/default/objects/Lead/listViews/NSW_Family_Leads.listView-meta.xml
<ListView>
    <fullName>NSW_Family_Leads</fullName>
    <booleanFilter>(1 or 4) AND (2 OR 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Lead_Rejection_Reason__c</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Lead_Mapping_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Family_Application</value>
    </filters>
    <filters>
        <field>Parent_1_State__c</field>
        <operation>equals</operation>
        <value>NSW</value>
    </filters>
    <filters>
        <field>Parent_1_State__c</field>
        <operation>equals</operation>
        <value>ACT</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.In_Hospital_Family</value>
    </filters>
    <label>NSW Family Leads</label>
    <sharedTo></sharedTo>
</ListView>