force-app/main/default/objects/Lead/listViews/NSW_Family_Leads_New_and_Contacted.listView-meta.xml
<ListView>
    <fullName>NSW_Family_Leads_New_and_Contacted</fullName>
    <booleanFilter>1 AND (2 OR 3) AND (4 OR 5)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>Office__c</columns>
    <columns>LEAD.STATE</columns>
    <columns>Parent_1_Suburb__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Family_Application</value>
    </filters>
    <filters>
        <field>Parent_1_State__c</field>
        <operation>equals</operation>
        <value>NSW</value>
    </filters>
    <filters>
        <field>Parent_1_State__c</field>
        <operation>equals</operation>
        <value>ACT</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Contacted</value>
    </filters>
    <label>NSW Family Leads - New and Contacted</label>
    <sharedTo></sharedTo>
</ListView>